--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,7 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "BEUM_Mobile.sln"
+    "dotnet.defaultSolution": "BEUM_Mobile.sln",
+    "IDX.aI.enableInlineCompletion": true,
+    "IDX.aI.enableCodebaseIndexing": true
 }
